styles.css
#main-container {
    height: 90vh;
    width: 90vw;

    margin: 0 auto;
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 1fr 4fr;
}

#content-area {
    display: grid;
    grid-template-rows: 1fr 1fr 6fr 1fr;
    gap: 10px;
}

#search-container {
    background-color: red;
}

#search-form {
    display: flex;
    align-items: center;
    gap: 10px;

    width: 100%;
    height: 100%;
}

#search-bar {
    flex: 1;
}

#search-btn {
    background-image: url("./assets/magnify.svg");
    width: 20px;
    height: 20px;
    background-color: white;
}

#calendar-label {
    background-color: red;
}

#calendar {
    background-color: red;

    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(7, 1fr);
    gap: 10px;
}

.day {
    background-color: blue;
}

#not-sure-yet {
    background-color: red;
}

